Fix css width issue
Page became too wide, leading to an unneeded horizontal scroll bar.
Rearranging padding fixed this.

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,14 +1,15 @@
 .menu {
     font-size: 3.4rem;
     width: 100%;
-    padding: 10px;
-//    border-bottom-style: solid;
+    padding-top: 10px;
     border-bottom-color: #1eaedb;
     margin-bottom: 20px;
-    padding-left: 36px;
 }
 .menu a {
     text-decoration: none;
+}
+.menuItem {
+    padding-left: 36px;
 }
 .nohuman {
     position: absolute;
